style.css
/* For testing only */
* { border: 1px solid rebeccapurple; }

/* GENERAL */
* {
    /* TODO
    Change color scheme */
    background-color: rgb(10, 15, 25);
    color: rgb(215, 235, 255);
    /* Cancel default property values */
    margin: 0;
    padding: 0;
}


/*****************************************
***************** PAINT ******************
*****************************************/

.draw-box {
    border: 2px solid red; /* FOR TESTING ONLY */
    background-color: rgb(215, 235, 255);
}

.painted {
    background-color: rgb(0, 0, 0);
}

/*****************************************
***************** <main> *****************
*****************************************/

main {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1em;
}

/* TOP BAR */
.top-bar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 1em;
    padding: 0em 1em;
}

.top-bar .btn {
    background-color: rgb(215, 235, 255);
    color: rgb(10, 15, 25);
    width: 75px;
    height: 75px;
    padding: 1em 1em;
    border-radius: 50%;
}

/* DRAWING PAD */
.drawing-pad {
    background-color: rgb(215, 235, 255);
    width: 800px;
    height: 800px;
}

